added minor changes to nlp post

--- a/_notebooks/2020-06-27-Introduction to NLP using Fastai.ipynb
+++ b/_notebooks/2020-06-27-Introduction to NLP using Fastai.ipynb
@@ -601,11 +601,11 @@
    "source": [
     "##### 1. Tokenization\n",
     "\n",
-    "The first step is to gather all the unique 'tokens' in the corpus being used. \n",
+    "The first step is to gather all the unique `tokens` in the corpus being used. \n",
     "\n",
-    "A 'token' is defined by the person creating the language model based on the granularity level i.e. the smallest part of the text they would like to consider. In the simplest scenarion, a word can be considered as the token.\n",
+    "A `token` can be defined in numerous ways depedning on the person creating the language model based on the granularity level i.e. the smallest part of the text they would like to consider. In the simplest scenario, a word can be considered as the token.\n",
     "\n",
-    "So the idea is to get a list of all the unique words used in the general domain corpus(Wikipedia 103 dataset) and our downstream dataset(Disaster tweets dataset) to build a vocabulary for training our language model."
+    "So the idea is to get a list of all the unique words used in the general domain corpus(Wikipedia 103 dataset) and our added downstream dataset(Disaster tweets dataset) to build a vocabulary for training our language model."
    ]
   },
   {
@@ -857,7 +857,10 @@
    "metadata": {},
    "source": [
     "#### Discriminative Fine-tuning\n",
-    "Since different layers of the model capture different types of information and thus they should be fine-tuned to different extents. This idea is same as the use of discriminative learning rates used in CV applications. "
+    "\n",
+    "Since different layers of the model capture different types of information and thus they should be fine-tuned to different extents. \n",
+    "\n",
+    "This idea is similar as the use of discriminative learning rates used in CV applications which I explained in detail in my previous [post](https://harish3110.github.io/through-tinted-lenses/image%20classification/2020/04/10/Improving-baseline-model.html#Discriminative-learning-rates)."
    ]
   },
   {
@@ -865,9 +868,17 @@
    "metadata": {},
    "source": [
     "#### Slanted Learning Rates\n",
-    "The idea behing slanted learning rates is that for a pretrained language model to adpat/fine-tune itself to the downstream dataset, the fine-tuning process should ideally converge faster to asuitable region in the parameter space and thern refine its parameters there. \n",
+    "\n",
+    "The idea behind slanted learning rates is that for a pretrained language model to adpat/fine-tune itself to the downstream dataset, the fine-tuning process should ideally converge faster to asuitable region in the parameter space and thern refine its parameters there. \n",
     "\n",
     "So the slanted learning rates approach first linearly increases the learning rates for a short period and then linearly decays the learning rate slowly which is a modification of of Leslie Smith's traingular learning rate approache where the increase and decrease is almost the same. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](https://miro.medium.com/max/1096/1*QptmUluWXteT6oI5bD22rw.png 'Slanted Triangular Learning Rates')"
    ]
   },
   {
@@ -1384,6 +1395,15 @@
     "- At the beginning of each batch, the model is initiated with the final state of the previous batch by keeping track of the hidden states for mean and max-pooling. \n",
     "- The gradients are back-propagated to the batches whose hidden states contributed to the final prediction. \n",
     "- In practice, variable length back-propagation sequences are used. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Concat Pooling\n",
+    "\n",
+    "Since signals for classifying texts can exist anywhere and are not only limited to last word in the sequence, the ULMFiT approach also proposes to concatenate the last time step of the document by max-pooling and mean-pooling representations to provide more signal and better training"
    ]
   },
   {
