added minor changes to nlp post

--- a/_notebooks/2020-06-27-Introduction to NLP using Fastai.ipynb
+++ b/_notebooks/2020-06-27-Introduction to NLP using Fastai.ipynb
@@ -528,7 +528,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](https://nlp.fast.ai/images/ulmfit_approach.png 'ULMFiT Process')"
+    "![](https://miro.medium.com/max/2000/1*9n9yv4EalUn76yP1Yffhfw.png 'The ULMFiT Process')"
    ]
   },
   {
