added minor changes to nlp post

--- a/_notebooks/2020-06-27-Introduction to NLP using Fastai.ipynb
+++ b/_notebooks/2020-06-27-Introduction to NLP using Fastai.ipynb
@@ -1108,7 +1108,6 @@
     }
    ],
    "source": [
-    "#collapse-hide\n",
     "learn.model"
    ]
   },
@@ -1119,11 +1118,13 @@
     "---\n",
     "##### Embedding Layer\n",
     "\n",
-    "We can see that the above `AWD LSTM` architecture used in ULMFiT has a bunch of something called **embedding** layers as the input here.\n",
+    "We can see that the above `AWD LSTM` architecture used in ULMFiT has a bunch of layers called **embedding** layers as the input here.\n",
     "\n",
-    "The pre-processed text and the batching of data using dataloaders is followed by by passing this data into an embedding layer which is small neural network by itself which is used to calculate token i.e. word dependencies in the dataset. These layers are trained along with the main neural network model and learns relationships between words in the dataset. \n",
+    "The pre-processed text and the batching of data using dataloaders is followed by passing this data into an embedding layer which can be considered as a small neural network by itself which is used to calculate token i.e. word dependencies in the dataset. These layers are trained along with the main neural network model and learns relationships between words in the dataset along the way. \n",
     "\n",
-    "An embedding layer is a computationally efficient method to represent tokens in a lesser dimension space, being less sparse and as a look-up table for all tokens in our dataset which captures relationships between the tokens. "
+    "An embedding layer is a computationally efficient method to represent tokens in a lesser dimension space, being less sparse and as a look-up table for all tokens in our dataset which captures relationships between the tokens. \n",
+    "\n",
+    "It's a much more computationally efficient approach to the traditional `one-hot encoding` appraoch which can make these types of task really expensive and inefficient."
    ]
   },
   {
