--- a/_notebooks/2020-06-27-Introduction to NLP using Fastai.ipynb
+++ b/_notebooks/2020-06-27-Introduction to NLP using Fastai.ipynb
@@ -1304,7 +1304,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once we have fine-tuned out LM to our downstream task, we save the encoder part of the model which is all of our model except the final layer that converts activations to probabilities of picking each token in our vocabulary. \n",
+    "Once we have fine-tuned out LM to our downstream task, we save the encoder part of the model which portion of the model except the final layer that predicts the next word in the sequence. \n",
     "\n",
     "We can then use this encoder part as our base to build a toxic comment classification model. "
    ]
