added minor changes to nlp post

--- a/_notebooks/2020-06-27-Introduction to NLP using Fastai.ipynb
+++ b/_notebooks/2020-06-27-Introduction to NLP using Fastai.ipynb
@@ -1304,9 +1304,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once we have fine-tuned out LM to our downstream task, we save the encoder part of the model which portion of the model except the final layer that predicts the next word in the sequence. \n",
+    "Once we have fine-tuned out LM to our downstream task, we save the `encoder` part of the model which portion of the model except the final layer that predicts the next word in the sequence. \n",
     "\n",
-    "We can then use this encoder part as our base to build a toxic comment classification model. "
+    "We can then use this`encoder` part, which is the portion that learns the language semantics, as our base to build a disaster tweets classification model. "
    ]
   },
   {
@@ -1338,7 +1338,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have a LM fine-tuned to our downstream NLP dataset we can use the encoder portion of the fine-tuned language model which is the part that learns the features of the language used in the downstream dataset as the base to build a text classifier for tasks such as sentiment analysis, spam detection, fraud detection, document classifcation etc. "
+    "Now that we have a language model fine-tuned to our downstream NLP dataset we can use the encoder portion of the fine-tuned language model which is the part that learns the features of the language used in the downstream dataset as the base to build a text classifier for tasks such as sentiment analysis, spam detection, fraud detection, document classifcation etc. "
    ]
   },
   {
@@ -1352,9 +1352,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fine-tuning a classifier is a very critical task in a transfer learning method. Overly aggressive fine-tuning can result in catastrophic forgetting and too cautious fine-tuning can lead to extremely slow convergence. \n",
+    "Fine-tuning a classifier is a very critical task in a transfer learning method and is the main reason why transfer learning approaches failed until ULMFiT came along. \n",
     "\n",
-    "To tackle this the paper introduces **gradual unfreezing** besides also using slanted triangular learning rates and discriminative fine-tuning"
+    "Overly aggressive fine-tuning can result in **catastrophic forgetting** and too cautious fine-tuning can lead to extremely slow convergence. \n",
+    "\n",
+    "To tackle this problem, ULMFiT introduces a novel fine-tuning technique in **gradual unfreezing** besides also using **slanted triangular learning rates** and **discriminative fine-tuning** to successfully train a classifier using a pre-trained LM."
    ]
   },
   {
@@ -1368,7 +1370,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The idea behind gradual unfreezing is that fine-tuning a classifier on all layers can result in catastrophic forgetting and thus each layer staring form the las layer is trained one after the other by freezing all the lower layers and only training the layer in question. "
+    "The idea behind gradual unfreezing is that fine-tuning a classifier on all layers can result in catastrophic forgetting and thus each layer staring form the las layer is trained one after the other by freezing all the lower layers and only training the layer in question. \n",
+    "\n",
+    "The paper empirically found that after training the last layer of the model with a learning rate of `lr`, the subsequent layers can be trained one after another by reducing `lr` by a factor of `2.6`."
    ]
   },
   {
@@ -1610,7 +1614,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Training the classifier"
+    "#### Training the classifier\n",
+    "> Fine-tuning a cla"
    ]
   },
   {
