--- a/_notebooks/2020-06-27-Introduction to NLP using Fastai.ipynb
+++ b/_notebooks/2020-06-27-Introduction to NLP using Fastai.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_path = '/home/harish3110/Desktop/datasets/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -109,13 +118,13 @@
       "/home/harish3110/Desktop/datasets\n",
       "/home/harish3110/Desktop/datasets/nlp-getting-started\n",
       "Downloading nlp-getting-started.zip to /home/harish3110/Desktop/datasets/nlp-getting-started\n",
-      "100%|████████████████████████████████████████| 593k/593k [00:00<00:00, 2.11MB/s]\n",
-      "100%|████████████████████████████████████████| 593k/593k [00:00<00:00, 2.10MB/s]\n"
+      "100%|████████████████████████████████████████| 593k/593k [00:00<00:00, 2.08MB/s]\n",
+      "100%|████████████████████████████████████████| 593k/593k [00:00<00:00, 2.08MB/s]\n"
      ]
     }
    ],
    "source": [
-    "%cd ~/Desktop/datasets\n",
+    "%cd {dataset_path}\n",
     "dataset = 'nlp-getting-started'\n",
     "\n",
     "# Creating a folder for the dataset\n",
@@ -128,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -151,31 +160,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sample_submission.csv  test.csv  train.csv\r\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(#3) [Path('test.csv'),Path('sample_submission.csv'),Path('train.csv')]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# View the files\n",
-    "\n",
-    "!ls"
+    "path = Path(f'{dataset_path}{dataset}')\n",
+    "Path.BASE_PATH = path\n",
+    "path.ls()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_csv('train.csv')\n",
-    "test = pd.read_csv('test.csv')"
+    "train = pd.read_csv(path/'train.csv')\n",
+    "test = pd.read_csv(path/'test.csv')"
    ]
   },
   {
@@ -821,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +894,7 @@
        "4                                               Just got sent this photo from Ruby #Alaska as smoke from #wildfires pours into a school "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -915,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -979,18 +991,18 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>xxbos xxmaj put the xxup right person up on the block # xxmaj shelli xxrep 3 ? xxmaj the sense of xxunk is ridiculous . # xxup bb17 . xxbos xxunk xxup dw was on his way to a better career than xxmaj xxunk and that was n't derailed until 2014 . xxmaj shame . xxbos xxmaj wreckage ' conclusively xxmaj confirmed ' as xxmaj from xxup mh370 : xxmaj malaysia xxup pm : xxmaj investigators and the families of</td>\n",
-       "      <td>xxmaj put the xxup right person up on the block # xxmaj shelli xxrep 3 ? xxmaj the sense of xxunk is ridiculous . # xxup bb17 . xxbos xxunk xxup dw was on his way to a better career than xxmaj xxunk and that was n't derailed until 2014 . xxmaj shame . xxbos xxmaj wreckage ' conclusively xxmaj confirmed ' as xxmaj from xxup mh370 : xxmaj malaysia xxup pm : xxmaj investigators and the families of those</td>\n",
+       "      <td>xxbos xxunk i agree ! i did n't know you had moved to xxmaj xxunk . i woke up to your report &amp; &amp; thought my favorite worlds ( xxunk - xxunk ) collided . xxbos xxunk xxunk xxmaj except we do n't know who started the riot or if it even makes sense to credit any xxunk individuals … xxbos xxunk is like [ cash xxup register ] [ buildings xxup</td>\n",
+       "      <td>xxunk i agree ! i did n't know you had moved to xxmaj xxunk . i woke up to your report &amp; &amp; thought my favorite worlds ( xxunk - xxunk ) collided . xxbos xxunk xxunk xxmaj except we do n't know who started the riot or if it even makes sense to credit any xxunk individuals … xxbos xxunk is like [ cash xxup register ] [ buildings xxup burning</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>xxmaj under a xxmaj minute http : / / t.co / xxunk xxbos xxmaj correction : xxmaj tent xxmaj collapse xxmaj story http : / / t.co / xxunk xxbos xxunk xxmaj xxunk not getting rid me until every last drop of life has gone … i xxunk into burning buildings because all xxmaj life matters . xxmaj xxunk xxbos xxmaj suicide bomber xxunk in xxmaj saudi xxmaj arabia mosque 17 reportedly killed http : / / t.co / xxunk</td>\n",
-       "      <td>under a xxmaj minute http : / / t.co / xxunk xxbos xxmaj correction : xxmaj tent xxmaj collapse xxmaj story http : / / t.co / xxunk xxbos xxunk xxmaj xxunk not getting rid me until every last drop of life has gone … i xxunk into burning buildings because all xxmaj life matters . xxmaj xxunk xxbos xxmaj suicide bomber xxunk in xxmaj saudi xxmaj arabia mosque 17 reportedly killed http : / / t.co / xxunk xxbos</td>\n",
+       "      <td>xxmaj thunder by xxup xxunk xxmaj quick on xxmaj amazon xxmaj kindle and soon in xxup print at xxmaj amazon xxmaj books via xxmaj create … http : / / t.co / xxunk via xxunk xxbos xxmaj xxunk xxmaj xxunk w / xxmaj xxunk xxmaj st * * trfc collision - no xxmaj inj * * http : / / t.co / xxunk xxbos xxup ig : http : / / t.co</td>\n",
+       "      <td>thunder by xxup xxunk xxmaj quick on xxmaj amazon xxmaj kindle and soon in xxup print at xxmaj amazon xxmaj books via xxmaj create … http : / / t.co / xxunk via xxunk xxbos xxmaj xxunk xxmaj xxunk w / xxmaj xxunk xxmaj st * * trfc collision - no xxmaj inj * * http : / / t.co / xxunk xxbos xxup ig : http : / / t.co /</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>our true xxmaj hero 's ! ! xxmaj besides your music xxbos xxmaj if abortion is murder then xxunk are xxunk and xxunk is mass genocide . xxbos xxmaj fatality ! xxbos xxmaj interesting : xxup mh370 : xxmaj aircraft debris found on xxmaj la xxmaj reunion is from missing xxmaj malaysia xxmaj airlines … - xxup abc … http : / / t.co / xxunk xxmaj please xxup rt xxbos xxmaj rly tragedy in xxup mp : xxmaj some</td>\n",
-       "      <td>true xxmaj hero 's ! ! xxmaj besides your music xxbos xxmaj if abortion is murder then xxunk are xxunk and xxunk is mass genocide . xxbos xxmaj fatality ! xxbos xxmaj interesting : xxup mh370 : xxmaj aircraft debris found on xxmaj la xxmaj reunion is from missing xxmaj malaysia xxmaj airlines … - xxup abc … http : / / t.co / xxunk xxmaj please xxup rt xxbos xxmaj rly tragedy in xxup mp : xxmaj some live</td>\n",
+       "      <td>&lt; https : / / t.co / xxunk xxbos xxmaj in my experience if you 're always angry and critical as a xxunk you are in xxunk danger of going off the xxunk . 1 / xxbos xxmaj how can we help save a beautiful town in xxmaj ontario from destruction by a power plant xxunk ? \\n http : / / t.co / xxunk xxbos xxmaj this xxmaj govt of xxmaj</td>\n",
+       "      <td>https : / / t.co / xxunk xxbos xxmaj in my experience if you 're always angry and critical as a xxunk you are in xxunk danger of going off the xxunk . 1 / xxbos xxmaj how can we help save a beautiful town in xxmaj ontario from destruction by a power plant xxunk ? \\n http : / / t.co / xxunk xxbos xxmaj this xxmaj govt of xxmaj xxunk</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -1009,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,20 +1032,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<fastai2.data.core.DataLoaders at 0x7f331d425510>"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# To load the Dataloaders in the future\n",
     "\n",
@@ -1044,6 +1045,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "#### Fine-tuning the language model\n",
     "\n",
     "Fine-tuning Wikitext 103 based LM to disaster tweets using ULMFiT fine-tuning methodologies. This fine-tuned LM can thus be used as the base to classify disaster texts in the next step.\n",
@@ -1619,6 +1621,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "#### Training the classifier\n",
     "> Fine-tuning a text classifier using gradual unfreezing, slanted learning rates and discriminating learning techniques."
    ]
@@ -2068,7 +2071,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sub.to_csv('~/Desktop/my_fastai_notebooks/Text/submission.csv', index=False)"
+    "sub.to_csv(path/'submission.csv', index=False)"
    ]
   },
   {
