--- a/_notebooks/2020-06-27-Introduction to NLP using Fastai.ipynb
+++ b/_notebooks/2020-06-27-Introduction to NLP using Fastai.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -117,10 +117,11 @@
      "output_type": "stream",
      "text": [
       "/home/harish3110/Desktop/datasets\n",
+      "mkdir: cannot create directory ‘nlp-getting-started’: File exists\n",
       "/home/harish3110/Desktop/datasets/nlp-getting-started\n",
       "Downloading nlp-getting-started.zip to /home/harish3110/Desktop/datasets/nlp-getting-started\n",
-      "100%|████████████████████████████████████████| 593k/593k [00:00<00:00, 3.26MB/s]\n",
-      "100%|████████████████████████████████████████| 593k/593k [00:00<00:00, 3.25MB/s]\n"
+      "100%|████████████████████████████████████████| 593k/593k [00:00<00:00, 2.09MB/s]\n",
+      "100%|████████████████████████████████████████| 593k/593k [00:00<00:00, 2.09MB/s]\n"
      ]
     }
    ],
@@ -137,17 +138,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Archive:  nlp-getting-started.zip\r\n",
-      "  inflating: sample_submission.csv   \r\n",
-      "  inflating: test.csv                \r\n",
-      "  inflating: train.csv               \r\n"
+      "Archive:  nlp-getting-started.zip\n",
+      "replace sample_submission.csv? [y]es, [n]o, [A]ll, [N]one, [r]ename: ^C\n"
      ]
     }
    ],
@@ -160,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +168,7 @@
        "(#3) [Path('test.csv'),Path('sample_submission.csv'),Path('train.csv')]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +290,7 @@
        "4       1  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +312,7 @@
        "Name: target, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +409,7 @@
        "4                                                     Typhoon Soudelor kills 28 in China and Taiwan  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +560,7 @@
        "'Our Deeds are the Reason of this #earthquake May ALLAH Forgive us all'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +583,7 @@
        "(#21) ['xxbos','xxmaj','our','xxmaj','deeds','are','the','xxmaj','reason','of'...]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +618,7 @@
        "(#21) ['xxbos','xxmaj','our','xxmaj','deeds','are','the','xxmaj','reason','of'...]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
