updated config.yml file

--- a/_notebooks/2020-03-29-Building an image classifier using Fastai.ipynb
+++ b/_notebooks/2020-03-29-Building an image classifier using Fastai.ipynb
@@ -12,6 +12,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- author: Harish Vadlamani\n",
+    "- image: images/ttl_small.png\n",
     "- categories: [Computer Vision, Image Classification]\n"
    ]
   },
