--- a/_notebooks/2020-03-29-Building an image classifier using Fastai.ipynb
+++ b/_notebooks/2020-03-29-Building an image classifier using Fastai.ipynb
@@ -46,7 +46,7 @@
    "outputs": [],
    "source": [
     "from data.utils import *\n",
-    "from fastai2.vision.all import *\n",
+    "from fastai.vision.all import *\n",
     "%matplotlib inline"
    ]
   },
