--- a/_notebooks/2020-04-03-A look at the L Data Structure in Fastai.ipynb
+++ b/_notebooks/2020-04-03-A look at the L Data Structure in Fastai.ipynb
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "from fastcore.imports import *\n",
-    "from fastai2.vision.all import *"
+    "from fastai.vision.all import *"
    ]
   },
   {
