--- a/_notebooks/2020-04-10-Improving baseline model.ipynb
+++ b/_notebooks/2020-04-10-Improving baseline model.ipynb
@@ -63,7 +63,7 @@
    },
    "outputs": [],
    "source": [
-    "from fastai2.vision.all import *\n",
+    "from fastai.vision.all import *\n",
     "%matplotlib inline"
    ]
   },
@@ -176,7 +176,7 @@
     {
      "data": {
       "text/plain": [
-       "<fastai2.learner.Learner at 0x7f2ec9c62250>"
+       "<fastai.learner.Learner at 0x7f2ec9c62250>"
       ]
      },
      "execution_count": 23,
@@ -1874,7 +1874,7 @@
     }
    ],
    "source": [
-    "from fastai2.callback.fp16 import *\n",
+    "from fastai.callback.fp16 import *\n",
     "learn = cnn_learner(dls, resnet50, metrics=accuracy).to_fp16()\n",
     "learn.fine_tune(6, freeze_epochs=3)"
    ]
@@ -1960,7 +1960,7 @@
     {
      "data": {
       "text/plain": [
-       "<fastai2.learner.Learner at 0x7f696f2b04d0>"
+       "<fastai.learner.Learner at 0x7f696f2b04d0>"
       ]
      },
      "execution_count": 27,
